# swamptt

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
code-gen/: codegen.py  schema-from-pyi.py
code-gen/sources/: Swabian.pyi  blocklist.json
src/swamptt/: client.py  client_stubs.py  server.py  server_handlers.py
