[project]
name = "swamptt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dc-parse",
    "msgpack>=1.1.2",
    "numpy>=2.4.4",
    "swabian-timetagger==2.20.2; sys.platform=='linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
dc-parse = { git = "https://github.com/Peter-Barrow/dc_parse.git" }

[project.scripts]
swamptt-server = "swamptt.server:main"
